# cvx_stat_arb

./: .buildinfo  .gitignore  README.md  create_kernel.sh  pyproject.toml  searchindex.js
.github/workflows/: book.yml  test.yml
artifacts/sphinx/: genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
artifacts/sphinx/.doctrees/: environment.pickle  index.doctree  license.doctree
artifacts/sphinx/.doctrees/autoapi/: index.doctree
artifacts/sphinx/_modules/: ccp.html  index.html  utils.html
artifacts/sphinx/_sources/autoapi/: index.rst.txt
artifacts/sphinx/autoapi/: index.html
artifacts/sphinx/autoapi/backtest/: index.html
artifacts/sphinx/autoapi/ccp/: index.html
artifacts/sphinx/autoapi/utils/: index.html
artifacts/tests/coverage/: coverage.xml
artifacts/tests/html-coverage/: d_45c6ed98b885904a_ccp_py.html  index.html  status.json
artifacts/tests/html-report/: report.html
cvx/stat_arb/: backtest.py  ccp.py  utils.py
data/: asset_to_sector.pkl  sector_to_asset.pkl
docs/: api.html  index.html  nb.html  reports.html
docs/notebooks/: capacity.html  difference.html  monkey.html  pairs.html  quantstats.html
notebooks/: clean_data.ipynb  cvx_ccv_stat_arb.ipynb  dynamic_backtest.ipynb  industry_splits.ipynb  many_arbs.ipynb  playground.ipynb  temp.csv
tests/: conftest.py  generate_data.py  matrix.py  sandbox.py  test_metrics.py  test_portfolio.py  test_stat_arb.py  vector.py
tests/resources/: daily_profit.csv  holdings.csv  sr_profit.csv  stat_arb_assets.csv  stat_arb_mu.csv  total_profit.csv
(+6 files in other folders)
